--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,14 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/axios": "^0.9.36",
-    "axios": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-speech-recognition": "^4.0.1",
-    "react-text-to-speech": "^2.1.1",
-    "types": "file:../../../../../../../axios"
+    "react-text-to-speech": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
